spring-rest/src/main/java/com/example/spring_rest/error/NotFoundProdutoException.java
package com.example.spring_rest.error;

public class NotFoundProdutoException  extends RuntimeException {
    public NotFoundProdutoException(String msg)
    {
        super(msg);
    }

}
